--- a/GraphCode.html
+++ b/GraphCode.html
@@ -55,7 +55,7 @@ rec_flag = false;
 connection.write("clearInterval(1)\n", function() { });
 } else {
 data.splice(0,data.length);
-connection.write("setInterval(function(){Bluetooth.println(readpressure().toFixed(3));} ,18); \n", function() { });
+connection.write("setInterval(function(){Bluetooth.println(readvoltage().toFixed(3));} ,18); \n", function() { });
 t = new Date();
 start_time = t;
 var date_win_min = t.getTime();
