--- a/GraphCode.html
+++ b/GraphCode.html
@@ -56,7 +56,7 @@ rec_flag = false;
 connection.write("clearInterval(1)\n", function() { });
 } else {
 data.splice(0,data.length);
-connection.write("setInterval(function(){Bluetooth.println(analogread(29).toFixed(3));} ,18); \n", function() { });
+connection.write("setInterval(function(){Bluetooth.println(analogRead(29).toFixed(3));} ,18); \n", function() { });
 t = new Date();
 start_time = t;
 var date_win_min = t.getTime();
